# HTTP_Messenger_Logger

./: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
UI/: BaseWindow.cpp  BaseWindow.h  DeSerializer.cpp  DeSerializer.h  LoggerUI1.pro  LoggerUI1.pro.user.5520cb6  LoggerUI1.pro.user.c935cc6  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  welcomescreen.cpp  welcomescreen.h  welcomescreen.ui
examples/: bad_log.txt  de.cpp  example1.cpp  example_class.cpp  log1.txt  log2.txt  logSep_Sat_25_15:27.txt  log_.txt  te mp.cpp  temp.cpp  try1.cpp
examples/logs/: log.json  log1.json  log25_09_2021 11_16_26.json  log_.json  log_00:09_01-10-2021.txt  log_00:14_01-10-2021.txt  log_test.txt
include/: Log.h  Logger.h
src/: DeSerializer.cpp  DeSerializer.h  Log.cpp  Log.h  Logger.cpp  Logger.h
